--- a/kbcfx/lesson8/index.html
+++ b/kbcfx/lesson8/index.html
@@ -9,9 +9,15 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <form>
+        <label for="minprice">minprice</label>
+        <input type="number" name="minprice" id="minprice" value="0">
+        <label for="maxprice">maxprice</label>
+        <input type="number" name="maxprice" id="maxprice" value="0">
+    </form>
     <button>random activity</button>
     <div class="activity">
-        
+
     </div>
 </body>
 </html>
