--- a/52GANG/Paint L11-12/index.html
+++ b/52GANG/Paint L11-12/index.html
@@ -15,6 +15,7 @@
             <input type="color" id="color">
             <button id="fillBtn" onclick="fillIn()">Fill</button>
             <button id="clearBtn" onclick="clearAll()">Clear</button>
+            <a id="download" href="#" download="IMG.png">Downloud</a>
         </div>
         <div class="rangeBar">
             <input type="range" min="1" max="32" value="5" id="range">
