--- a/MarkAseew228/lesson 11-12/index.html
+++ b/MarkAseew228/lesson 11-12/index.html
@@ -15,6 +15,7 @@
             <input type="color" id="color">
             <button id="fillBtn" onclick="fillIn()">Fill</button>
             <button id="clearBtn" onclick="clearAll()">Clear</button>
+            <a id="download" href="#" download="IMG.png">Download</a>
         </div>
         <div class="rangeBar">
             <input type="range" min="1" max="50" value="10" id="range">
