--- a/bondorenko/lesson 13/index.html
+++ b/bondorenko/lesson 13/index.html
@@ -13,6 +13,7 @@
             <input type="color" id="color">
             <button id="fillBtn" onclick="fillln()">Fill</button>
             <button id="clearBtn" onclick="clearAll()">clear</button>
+            <a id="download" href="#" download="IMG.png">download</a>
         </div>
             <div class="rangeBar">
                 <input type="range" min="1" max="50" value="10" id="range">
