--- a/SNitkovKIJ/lesson 12/index.html
+++ b/SNitkovKIJ/lesson 12/index.html
@@ -13,6 +13,7 @@
             <input type="color" id="color">
             <button id="fillBtn" onclick="fillin()">Fill</button>
             <button id="clearBtn" onclick="clearAll()">Clear</button>
+            <a id="download" href="#" download="NiGA.png">downloud</a>
         </div>
         <div class="rangeBar">
             <input type="range" min="1" max="50" value="10" id="range">
