--- a/ХЗ/lesson 11-12/index.html
+++ b/ХЗ/lesson 11-12/index.html
@@ -12,11 +12,12 @@
     <div class="colorBar">
         <input type="color" id="color">
         <button id="fillBtn" onclick="fillIn()">fill</button>
-        <button id="clearBtn">clear</button>
+        <button id="clearBtn" onclick="clearAll()">clear</button>
+        <a id="download" href="#" download="IMG.png">download</a>
     </div>
     <div class="rangeBar">
         <input type="range" min="1" max="50" value="10" id="range">
-        <span id="rangeVal">10</span>
+        <span id="rangeVal">100</span>
     </div>
 </div>
 <canvas></canvas>
