--- a/nikita aboba/Flappy4JS/Flappy4JS/index.html
+++ b/nikita aboba/Flappy4JS/Flappy4JS/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>My First Site</title>
+	<title>My first web game</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="flappy.js" defer></script>
@@ -9,6 +9,11 @@
 	
 </head>
 <body>
+	<div class="textBar">
+		<div class="bestScore">Best score: 0</div>
+		<div class="score">Score: 0</div>
+	</div>
 	<canvas></canvas>	
+	<button>Pause</button>
 </body>
 </html>
