--- a/Petrash/Flappy4JS/Flappy4JS/index.html
+++ b/Petrash/Flappy4JS/Flappy4JS/index.html
@@ -7,6 +7,11 @@
 	<script src="flappy.js" defer></script>
 </head>
 <body>	
+	<div class="textBar">
+		<div class="bestScore">Best score: 0</div>
+		<div class="score">score: 0</div>
+	</div>
 	<canvas></canvas>
+	<button>Pause</button>
 </body>
 </html>
