--- a/52GANG/Flappy4JS/Flappy4JS/index.html
+++ b/52GANG/Flappy4JS/Flappy4JS/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
-	<canvas> </canvas>
+	<div class="textBar">
+		<div class="bestScore">Best Score :10</div>
+		<div class="score">Score: 10</div>
+	</div>
+	<canvas></canvas>
+	<button>Pause</button>
 </body>
 
 </html>
