--- a/MarkAseew228/Flappy4JS/Flappy4JS/index.html
+++ b/MarkAseew228/Flappy4JS/Flappy4JS/index.html
@@ -9,7 +9,12 @@
 </head>
 
 <body>
+	<div class="textBar">
+		<div class="bestScore">Best score: 0</div>
+		<div class="score">Score: 0</div>
+	</div>
 	<canvas></canvas>
+	<button>Pause</button>
 </body>
 
 </html>
