--- a/nikita aboba/Flappy4JS/Flappy4JS/index.html
+++ b/nikita aboba/Flappy4JS/Flappy4JS/index.html
@@ -13,7 +13,8 @@
 		<div class="bestScore">Best score: 0</div>
 		<div class="score">Score: 0</div>
 	</div>
-	<canvas></canvas>	
+	<canvas></canvas>
+	<div class="box"></div>	
 	<button>Pause</button>
 </body>
 </html>
