--- a/Feduk/Flappy4JS/Flappy4JS/index.html
+++ b/Feduk/Flappy4JS/Flappy4JS/index.html
@@ -1,12 +1,25 @@
 <!DOCTYPE html>
 <html>
+
 <head>
 	<title>My First Site</title>
 	<meta charset="utf-8">
 	<link rel="stylesheet" type="text/css" href="style.css">
 	<script src="flappy.js" defer></script>
 </head>
-<body>	
-	<canvas></canvas>
+
+<body>
+	<div class="textBar">
+		<div class="bestScore">Best score: 0</div>
+		<div class="score"> Score: 0</div>
+	</div>
+	<div class="wrapper">
+     <canvas></canvas>
+	 <div class="box" >
+		<img src="https://i.pinimg.com/736x/1d/41/d8/1d41d8566200354efce216efb32c7d33.jpg" alt="">
+	 </div>
+	</div>
+	<button>Pause</button>
 </body>
+
 </html>
