--- a/Petrash/Flappy4JS/Flappy4JS/index.html
+++ b/Petrash/Flappy4JS/Flappy4JS/index.html
@@ -9,9 +9,12 @@
 <body>	
 	<div class="textBar">
 		<div class="bestScore">Best score: 0</div>
-		<div class="score">score: 0</div>
+		<div class="score">Score: 0</div>
 	</div>
+	<div class="wrapper">
 	<canvas></canvas>
+	<div class="box"></div>
+</div>
 	<button>Pause</button>
 </body>
 </html>
