--- a/52GANG/Flappy4JS/Flappy4JS/index.html
+++ b/52GANG/Flappy4JS/Flappy4JS/index.html
@@ -10,10 +10,13 @@
 
 <body>
 	<div class="textBar">
-		<div class="bestScore">Best Score :10</div>
-		<div class="score">Score: 10</div>
+		<div class="bestScore">Best Score :0</div>
+		<div class="score">Score: 0</div>
 	</div>
-	<canvas></canvas>
+	<div class="wrapper">
+		<canvas></canvas>
+		<div class="box"></div>
+	</div>
 	<button>Pause</button>
 </body>
 
