--- a/MarkAseew228/Flappy4JS/Flappy4JS/index.html
+++ b/MarkAseew228/Flappy4JS/Flappy4JS/index.html
@@ -13,7 +13,10 @@
 		<div class="bestScore">Best score: 0</div>
 		<div class="score">Score: 0</div>
 	</div>
-	<canvas></canvas>
+	<div class="wrapper">
+		<canvas></canvas>
+		<div class="box"></div>
+	</div>
 	<button>Pause</button>
 </body>
 
