--- a/Babich Sergiy Junior/Flappy4JS/index.html
+++ b/Babich Sergiy Junior/Flappy4JS/index.html
@@ -11,7 +11,12 @@
 		<div class="bestScore">Best score: 0</div>
 		<div class="score">score: 0</div>
 	</div>
+	<div class="wrapper">
 	<canvas></canvas>
+	<div class="box">
+		
+	</div>
+</div>
 	<button>Pause</button>
 </body>
 </html>
