--- a/bondorenko/Flappy4JS/Flappy4JS/index.html
+++ b/bondorenko/Flappy4JS/Flappy4JS/index.html
@@ -11,7 +11,12 @@
 		<div class="bestScore">Best score: 10</div>
 		<div class="score">Score: 10</div>
 	</div>
-	<canvas></canvas>
+	<div class="wrapper">
+		<canvas></canvas>
+		<div class="box">
+			<img src="https://pikuco.ru/upload/test_stable/947/9470830c7be753c0d39bc7949047315f.webp" alt="sdfgsdf">
+		</div>
+	</div>
 	<button>Pause</button>
 </body>
 </html>
