--- a/Ярошенко/something/index.html
+++ b/Ярошенко/something/index.html
@@ -4,10 +4,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <script src="../jquery.js" defer></script>
-    <script src="script.js"defer></script>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    
+    <header></header>
+    <main></main>
 </body>
 </html>
