--- a/Babich Sergiy Junior/Lesson 16/index.html
+++ b/Babich Sergiy Junior/Lesson 16/index.html
@@ -8,6 +8,11 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1>This is heading</h1>
+    <p>this is paragrapth</p>
+    <a href="#">This is link</a>
+    <button class="show">Show</button>
+    <button class="hide">Hide</button>
+    <img src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcT6N3zYaL8_u1qJcTj58UL305ZR55aK2SgHPg&s" alt="">
 </body>
 </html>
