--- a/kalash/lesson14/index.html
+++ b/kalash/lesson14/index.html
@@ -12,22 +12,25 @@
     <main>
 
     </main>
-    <form action="">
-        <label for="name">Name</label>
-        <input type="text" id="name" name="name">
+    <div class="cart">
+        <ul class="cartItems">
+
+        </ul>
+        <form>
+        <label for="address">Adress</label>
+        <input type="text" id="address" name="address">
         <br>
 
-        label for="desc">Description</label>
-        <textarea name="desc" id="name"></textarea>
+        <label for="telephone">Telephone</label>
+        <input type="tel" id="telephone" name="telephone">
         <br>
 
-        label for="photo_url">Photo URL</label>
-        <input type="text" id="photo_url" name="photo_url">
+        <label for="FirstName">First Name</label>
+        <input type="text" id="FirstName" name="FirstName">
         <br>
 
-        label for="price">Price</label>
-        <input type="number" id="price" name="price">
-        <br>
-    </form>
+        <button>ORDER NOW!</button>
+        </form>
+    </div>
 </body>
 </html>
