--- a/nikita aboba/lesson 16/index.html
+++ b/nikita aboba/lesson 16/index.html
@@ -5,9 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <script src="../jquery.js" defer></script>
-    <script src="script.js"defer></script>
+    <script src="script.js" defer></script>
+    <link rel="stylesheet" href="syle.css">
 </head>
 <body>
-    
+    <h1>this is heading</h1>
+    <p>this is paragraph</p>
+    <a href="#">this is link</a>
+    <button class="show">Show</button>
+    <button class="hide">Hide</button>
+    <img src="https://cataas.com/cat" alt="" width="500">
 </body>
 </html>
