--- a/ХЗ/lesson 16/index.html
+++ b/ХЗ/lesson 16/index.html
@@ -8,6 +8,12 @@
     <script src="script.js" defer></script>
 </head>
 <body>
-    
+    <h1>this is heading</h1>
+    <p>this is paragraph</p>
+    <a href="#">this is link</a>
+    <button class="show">Show</button>
+    <button class="hide">Hide</button>
+    <br>
+    <img src="https://cataas.com/cat" alt="" width="500">
 </body>
 </html>
