--- a/ХЗ/lesson 17/index.html
+++ b/ХЗ/lesson 17/index.html
@@ -60,7 +60,7 @@
     </div>
 
     <div class="dropMenu">
-        <div class="dropHead">Lorem ipsum, dolor sit amet consectetur adipisicing elit. Laudantium quae optio dolore dolores veritatis expedita id doloremque neque? Obcaecati, amet!</div>
+        <div class="dropHead">Lorem ipsum dolor sit amet.</div>
         <div class="dropBody">Lorem ipsum dolor, sit amet consectetur adipisicing elit. Illum nemo voluptatibus cum labore, laborum illo tenetur necessitatibus dolore architecto quisquam?
         </div>
     </div>
